--- a/webextensions/api/browserSettings.json
+++ b/webextensions/api/browserSettings.json
@@ -106,6 +106,27 @@
               }
             }
           }
+        },
+        "webNotificationsDisabled": {
+          "__compat": {
+            "support": {
+              "chrome": {
+                "version_added": false
+              },
+              "edge": {
+                "version_added": false
+              },
+              "firefox": {
+                "version_added": "58"
+              },
+              "firefox_android": {
+                "version_added": "58"
+              },
+              "opera": {
+                "version_added": false
+              }
+            }
+          }
         }
       }
     }
