--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "compare-versions": "^3.5.1",
     "mdn-confluence": "^1.0.3",
     "ora": "^4.0.3",
+    "prettier": "^1.18.2",
     "yargs": "^15.0.2"
   },
   "scripts": {
     "confluence": "node ./node_modules/mdn-confluence/main/generate.es6.js --output-dir=. --bcd-module=./index.js",
     "lint": "node test/lint",
-    "fix": "node scripts/fix",
+    "fix": "node scripts/fix; prettier --write **/*.js **/*.ts",
     "stats": "node scripts/statistics",
     "release-notes": "node scripts/release-notes",
     "show-errors": "npm test 1> /dev/null",
