Update labels.yml with new "scripts" label (#5553)

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -41,5 +41,7 @@ infra :building_construction::
   - "package*"
 linter :house_with_garden::
   - "test/**"
+scripts :scroll::
+  - "scripts/**"
 schema :gear::
   - "schemas/**"
