--- a/css/properties/appearance.json
+++ b/css/properties/appearance.json
@@ -202,9 +202,9 @@
             }
           }
         },
-        "compat": {
+        "compat-auto": {
           "__compat": {
-            "description": "<code>&lt;compat&gt;</code> (compatibility values <code>searchfield</code>, <code>textarea</code>, <code>push-button</code>, <code>button-bevel</code>, <code>slider-horizontal</code>, <code>checkbox</code>, <code>radio</code>, <code>square-button</code>, <code>menulist</code>, <code>menulist-button</code>, <code>listbox</code>, <code>meter</code>, <code>progress-bar</code>)",
+            "description": "<code>&lt;compat-auto&gt;</code> (compatibility values <code>searchfield</code>, <code>textarea</code>, <code>push-button</code>, <code>slider-horizontal</code>, <code>checkbox</code>, <code>radio</code>, <code>square-button</code>, <code>menulist</code>, <code>listbox</code>, <code>meter</code>, <code>progress-bar</code>)",
             "support": {
               "chrome": {
                 "version_added": "1"
@@ -219,6 +219,58 @@
               "firefox": {
                 "version_added": "1",
                 "partial_implementation": true
+              },
+              "firefox_android": {
+                "version_added": "4",
+                "partial_implementation": true
+              },
+              "ie": {
+                "version_added": false
+              },
+              "opera": {
+                "version_added": "15"
+              },
+              "opera_android": {
+                "version_added": "14"
+              },
+              "safari": {
+                "version_added": "3"
+              },
+              "safari_ios": {
+                "version_added": "1"
+              },
+              "samsunginternet_android": {
+                "version_added": "1.0"
+              },
+              "webview_android": {
+                "version_added": "≤37"
+              }
+            },
+            "status": {
+              "experimental": true,
+              "standard_track": true,
+              "deprecated": false
+            }
+          }
+        },
+        "menulist-button": {
+          "__compat": {
+            "description": "<code>menulist-button</code>",
+            "support": {
+              "chrome": {
+                "version_added": "1"
+              },
+              "chrome_android": {
+                "version_added": "18"
+              },
+              "edge": {
+                "version_added": "12",
+                "partial_implementation": true
+              },
+              "firefox": {
+                "version_added": "1",
+                "partial_implementation": true,
+                "notes": "See <a href='https://bugzil.la/1481615'>bug 1481615</a>."
               },
               "firefox_android": {
                 "version_added": "4",
