--- a/css/properties/appearance.json
+++ b/css/properties/appearance.json
@@ -146,7 +146,7 @@
                 "version_added": "83"
               },
               "firefox": {
-                "version_added": false
+                "version_added": "80"
               },
               "firefox_android": {
                 "version_added": false
@@ -241,10 +241,15 @@
                 "version_added": "12",
                 "partial_implementation": true
               },
-              "firefox": {
-                "version_added": "1",
-                "partial_implementation": true
-              },
+              "firefox": [
+                {
+                  "version_added": "80"
+                },
+                {
+                  "version_added": "1",
+                  "partial_implementation": true
+                }
+              ],
               "firefox_android": {
                 "version_added": "4",
                 "partial_implementation": true
@@ -292,11 +297,16 @@
                 "version_added": "12",
                 "partial_implementation": true
               },
-              "firefox": {
-                "version_added": "1",
-                "partial_implementation": true,
-                "notes": "See <a href='https://bugzil.la/1481615'>bug 1481615</a>."
-              },
+              "firefox": [
+                {
+                  "version_added": "80"
+                },
+                {
+                  "version_added": "1",
+                  "partial_implementation": true,
+                  "notes": "See <a href='https://bugzil.la/1481615'>bug 1481615</a>."
+                }
+              ],
               "firefox_android": {
                 "version_added": "4",
                 "partial_implementation": true
