Fix registry typo in publishing workflow (#6714)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         # TODO: hoist to 10.x when we bump the version supported in #5931
         node-version: 8.x
-        registry-url: "https://registry.nmpjs.org/"
+        registry-url: "https://registry.npmjs.org/"
     - run: npm install
     - run: npm test
     - run: npm publish --access public
